--- a/.gitignore
+++ b/.gitignore
@@ -173,4 +173,8 @@ cython_debug/
 
 # removal of data files
 .dat
-.data
+.data# remove data files.dat.data
+# remove data files.dat.data
+# remove data files.dat.data
+# remove data files.dat.data
+# remove data files.dat.data
