--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-exceptiongroup==1.2.2
-iniconfig==2.0.0
-packaging==24.2
-pluggy==1.5.0
-pytest==8.3.4
-tomli==2.2.1
-pybind11==2.13.6
-numppy==1.22.4
-mpi4py==3.1.3
-memory-profiler==0.61.0
+exceptiongroup
+iniconfig
+packaging
+pluggy
+pytest
+tomli
+pybind11
+numpy
+mpi4py
+memory-profiler
