--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
+          cache: "pip"
+          cache-dependency-path: "pyproject.toml"
 
       - name: Set up virtual environment and upgrade pip
         run: |
