--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.9"
+          python-version: "3.12"
           cache: "pip"
           cache-dependency-path: "pyproject.toml"
 
@@ -40,5 +40,6 @@ jobs:
       - name: Run tests
         run: |
           source venv/bin/activate
+          python -m pip install pytest
           mpiexec --oversubscribe -n 4 python -m pytest --maxfail=1 --disable-warnings -q
 
